[package]
name = "rust-actix"
version = "0.1.0"
authors = ["Dualit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.11" }
#actix-service = { version = "2" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = { version = "0.4.14" }
env_logger = { version = "0.9" }
dotenv = { version = "0.15" }
sqlx = { version = "0.5.9", features = ["postgres", "runtime-tokio-rustls", "chrono"] }